--- a/biocad/templates/index.html
+++ b/biocad/templates/index.html
@@ -5,8 +5,8 @@
             var data = [];
             {% for equipment_id, data in schedule.items %}
                 {% for d in data %}
-                    data.push({"start": "{{ d.start|date:"n/j/Y g:i:00" }}",
-                                "end": "{{ d.end|date:"n/j/Y g:i:00" }}",
+                    data.push({"start": "{{ d.start|date:"n/j/Y G:i:00" }}",
+                                "end": "{{ d.end|date:"n/j/Y G:i:00" }}",
                                 "task":"{{ equipment_id }}",
                                 "order_id": {{ d.order_id}} ,
                                 "amount":{{ d.amount}} });
@@ -14,7 +14,7 @@
             {% endfor %}
 
             var colorScale = new Plottable.Scales.Color();
-            colorScale.range([].concat(... new Array(100).fill(['#1F77B4', '#FF7F0E', '#2CA02C', '#D62728', '#9467BD', '#8C564B', '#CFECF9', '#7F7F7F', '#BCBD22', '#17BECF'])));
+            colorScale.range([].concat(... new Array(500).fill(['#1F77B4', '#FF7F0E', '#2CA02C', '#D62728', '#9467BD', '#8C564B', '#CFECF9', '#7F7F7F', '#BCBD22', '#17BECF'])));
 
             var xScale = new Plottable.Scales.Time();
             var xAxis = new Plottable.Axes.Time(xScale, "bottom");
