--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,10 @@
         <script src="{% static "plottable/d3.js" %}"></script>
         <script src="{% static "plottable/plottable.js" %}"></script>
 
+        <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+        <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
+        <script src="{% static "js/main.js" %}"></script>
 		{% block headtag %}
 		{% endblock %}
 	</head>
