--- a/biocad/templates/index.html
+++ b/biocad/templates/index.html
@@ -73,7 +73,7 @@
           <div class="form-row align-items-center">
              <div class="col-auto">
               <select class="custom-select" name="equipment_class">
-                  <option {% if not equipment_class_id %}selected{% endif %}>Equipment class</option>
+                  <option value="" {% if not equipment_class_id %}selected{% endif %}>Equipment class</option>
                   {% for equipment_class in equipment_classes %}
                       <option value="{{ equipment_class.id }}" {% if equipment_class.id|floatformat:"0" == equipment_class_id|floatformat:"0" %}selected{% endif %}>{{ equipment_class.name }}</option>
                   {% endfor %}
